[gd_scene load_steps=5 format=3 uid="uid://bcqtnx2a5all3"]

[ext_resource type="PackedScene" uid="uid://dr1416rbqfgub" path="res://Characters/Enemies/enemy.tscn" id="1_ya72h"]
[ext_resource type="Script" path="res://UI/Gameplay/tasks_system.gd" id="2_kh2mb"]
[ext_resource type="PackedScene" uid="uid://db68bumn2aqv4" path="res://Objects/game_area.tscn" id="3_taa5s"]
[ext_resource type="PackedScene" uid="uid://1vbusn87ko7w" path="res://Characters/Hero/hero.tscn" id="5_m5e35"]

[node name="WikaTest" type="Node2D"]

[node name="Enemy" parent="." instance=ExtResource("1_ya72h")]
position = Vector2(173, 175)

[node name="Enemy2" parent="." instance=ExtResource("1_ya72h")]
position = Vector2(342, 222)

[node name="Tasks_system" type="CanvasLayer" parent="."]
script = ExtResource("2_kh2mb")

[node name="Label" type="Label" parent="Tasks_system"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 35

[node name="Game_interact" type="Node2D" parent="Tasks_system"]

[node name="interact" parent="Tasks_system/Game_interact" instance=ExtResource("3_taa5s")]
position = Vector2(336, 18)

[node name="TimerKillEnemyTask" type="Timer" parent="Tasks_system"]
wait_time = 80.018

[node name="TimeLabel" type="Label" parent="Tasks_system"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -187.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "xx:XX"

[node name="Hero" parent="." instance=ExtResource("5_m5e35")]
position = Vector2(38.383, 62.6751)

[connection signal="start_game" from="Tasks_system/Game_interact/interact" to="Tasks_system" method="_on_interact_start_game" flags=18]
[connection signal="timeout" from="Tasks_system/TimerKillEnemyTask" to="Tasks_system" method="_on_timer_kill_enemy_task_timeout"]
