[gd_scene load_steps=4 format=3 uid="uid://dhxho8hqe131d"]

[ext_resource type="Script" path="res://UI/Gameplay/tasks_system.gd" id="1_g5e5t"]
[ext_resource type="PackedScene" uid="uid://c1xeax3cpinri" path="res://Objects/MiniGames/Game_rotate.tscn" id="1_n3cyy"]
[ext_resource type="PackedScene" uid="uid://db68bumn2aqv4" path="res://Objects/game_area.tscn" id="2_vstp1"]

[node name="Tasks_system" type="CanvasLayer"]
script = ExtResource("1_g5e5t")

[node name="interact" parent="." instance=ExtResource("2_vstp1")]

[node name="GameRotate" parent="." instance=ExtResource("1_n3cyy")]

[connection signal="start_game" from="interact" to="." method="_on_interact_start_game"]
[connection signal="completed_game" from="GameRotate" to="." method="_on_game_rotate_completed_game"]
